src/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Cairo+Play:wght@900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');


body {
  background: url(assets/images/background.jpg);
  background-repeat: repeat;
  font-family: var(--font-family);
  color: var(--text-color);
  margin: 0;
}

.p-multiselect {
  min-width: 15rem;
  width: 18rem;
}

h1 {
  font-family: 'Cairo Play', sans-serif;
  font-size: 3.5rem;
  text-align: center;
  margin: 0;
  letter-spacing: 0.2rem;
}


h2 {
  font-family: 'Cairo Play', sans-serif;
  text-align: center;
  font-size: 2rem;
  line-height: 1.1;
}

